# ChangeLog for x11-base/xorg-server
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.660 2012/06/08 17:55:40 ranger Exp $

  08 Jun 2012; Brent Baude <ranger@gentoo.org> xorg-server-1.10.6-r1.ebuild,
  xorg-server-1.11.4-r1.ebuild:
  Marking -1.10.6-r1 -1.11.4-r1 for sec bug 412609

  08 Jun 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-server-1.10.4-r1.ebuild, xorg-server-1.10.6-r1.ebuild,
  xorg-server-1.10.6.ebuild, xorg-server-1.11.2-r1.ebuild,
  xorg-server-1.11.2-r2.ebuild, xorg-server-1.11.3.ebuild,
  xorg-server-1.11.4-r1.ebuild, xorg-server-1.11.4.ebuild,
  xorg-server-1.12.2.ebuild, xorg-server-1.9.5-r1.ebuild:
  Filter -O3 from CFLAGS for 1.11.4-r1 too. inherit flag-o-matic more to shut up
  repoman.

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  xorg-server-1.10.6-r1.ebuild:
  x86 stable wrt bug #412609

  07 Jun 2012; Brent Baude <ranger@gentoo.org> xorg-server-1.11.4.ebuild:
  Marking xorg-server-1.11.4 ppc for bug 419549

  06 Jun 2012; Brent Baude <ranger@gentoo.org> xorg-server-1.10.6-r1.ebuild,
  xorg-server-1.11.4-r1.ebuild:
  Marking -1.10.6-r1 -1.11.4-r1 ppc64 for sec bug 412609

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org> xorg-server-1.11.4-r1.ebuild:
  Stable for HPPA (bug #412609).

  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.11.4-r1.ebuild:
  Stable for amd64, wrt bug #412609

  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> xorg-server-1.10.6-r1.ebuild:
  Stable for AMD64, wrt bug #412609

*xorg-server-1.12.2 (29 May 2012)

  29 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +files/xorg-server-1.12-xf86edidmodes-array-bounds.patch,
  +xorg-server-1.12.2.ebuild, -xorg-server-1.12.1.902.ebuild:
  Version bump. Add patch for bug #402285.

*xorg-server-1.10.6-r1 (29 May 2012)

  29 May 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xorg-server-1.10.6-r1.ebuild: